readme, bugfix in compare function

--- a/index.html
+++ b/index.html
@@ -19,5 +19,31 @@
 			<h1 id="game-ended-text"></h1>
 			<button onclick="select('#modal').hide();">Close</button><button onclick="grid.restart(gridSizeSlider.value()); select('#modal').hide();">New game</button>
 		</div>
+		<datalist id="sizes">
+			<option value="3">
+			<option value="4" label="4">
+			<option value="5">
+			<option value="6">
+			<option value="7">
+			<option value="8" label="8">
+			<option value="9">
+			<option value="10">
+			<option value="11">
+			<option value="12" label="12">
+		</datalist>
+		<datalist id="scores">
+				<option value="4" label="16">
+				<option value="5">
+				<option value="6">
+				<option value="7">
+				<option value="8">
+				<option value="9" label="8">
+				<option value="10">
+				<option value="11" label="2048">
+				<option value="12">
+				<option value="13">
+				<option value="14">
+				<option value="15" label="32768">
+			</datalist>
 	</body>
 </html>
