--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<title>2048</title>
 
 		<link rel="stylesheet" href="main.css" />
-		<script src="libraries/p5.min.js"></script>
-		<script src="libraries/p5.dom.min.js"></script>
-		<script src="Grid.js"></script>
+		<script src="lib/p5.min.js"></script>
+		<script src="lib/p5.dom.min.js"></script>
+		<script src="lib/Grid.js"></script>
 		<script src="sketch.js"></script>
 	</head>
 	<body>
